--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,11 @@ select {
   }
 }
 
-/* global */
+/* styles */
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 
 .inner-wrapper {
     max-width: 960px;
@@ -114,6 +118,8 @@ a {
   font-size: 48px;
   font-weight: 800;
   color: #f9faf8;
+  line-height: 3.5rem;
+  margin-bottom: 1rem;
 }
 
 .hero-secondary,
@@ -122,10 +128,23 @@ a {
   color: #e5e7eb;
 }
 
+.hero-secondary, 
+.intro button {
+  margin-bottom: 1rem;
+}
+
+.offerings,
+.testimonial,
+.cta {
+  margin: 2rem 0;
+}
+
 .offering-header {
   font-size: 36px;
   font-weight: 800;
   color: #1F2937;
+  text-align: center;
+  margin: 2rem;
 }
 
 blockquote p {
@@ -133,4 +152,59 @@ blockquote p {
   font-weight: 300;
   color: #1F2937;
   font-size: 36px;
+}
+
+/* layout */
+
+.site-head .inner-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  text-transform: uppercase;
+}
+
+.site-nav ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.site-nav li {
+  padding: 10px;
+}
+
+.intro .inner-wrapper {
+  display: flex;
+}
+
+.intro-right {
+  display: flex;
+  justify-content: end;
+}
+
+.intro img {
+  max-width: 70%;
+  max-height: auto;
+  margin-bottom: 2rem;
+}
+
+.cards {
+  list-style-type: none;
+  list-style-position: inside;
+  padding: 0;
+  gap: 4rem;
+  padding-left: none;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+}
+
+
+.box {
+  background-color: green;
+  height: 10rem;
+  width: 10rem;
+  border-radius: 10%;
+  border: 5px black solid;
 }
