--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,7 @@ button {
 
 /* layout */
 
+/* header */
 .site-head .inner-wrapper {
   display: flex;
   justify-content: space-between;
@@ -178,6 +179,8 @@ button {
 .site-nav li {
   padding: 10px;
 }
+
+/* hero */
 
 .intro .inner-wrapper {
   display: flex;
@@ -198,6 +201,8 @@ button {
   max-height: auto;
   margin-bottom: 2rem;
 }
+
+/* content */
 
 .cards {
   list-style-type: none;
@@ -221,6 +226,7 @@ button {
   border: 5px black solid;
 }
 
+/* cta */
 
 .cta-card {
   width: 960px;
@@ -237,6 +243,8 @@ button {
 .cta-card button {
   border: 2px solid #e5e7eb;
 }
+
+/* testimonial */
 
 .testimonial {
   margin: 6rem auto;
@@ -258,6 +266,8 @@ blockquote .cite {
   display: flex;
   justify-content: flex-end;
 }
+
+/* footer */
 
 footer {
   margin-top: 6rem;
