--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,8 @@ body {
 .site-head,
 .intro,
 footer {
-    background-color: #1F2937;
-}
+    background-color: #112719;
+}1A1D18
 
 .offerings,
 .cta {
@@ -97,7 +97,7 @@ footer {
 
 .cta-card,
  button {
-  background-color: #3882f6;
+  background-color: #306A19;
 }
 
 .logo {
@@ -137,7 +137,7 @@ a {
 .offering-header {
   font-size: 36px;
   font-weight: 800;
-  color: #1F2937;
+  color: #112719;
   text-align: center;
   margin: 2rem;
 }
@@ -145,7 +145,7 @@ a {
 blockquote p {
   font-style: italic;
   font-weight: 300;
-  color: #1F2937;
+  color: #112719;
   font-size: 36px;
 }
 
