--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ body {
 .intro,
 footer {
     background-color: #112719;
-}1A1D18
+}
 
 .offerings,
 .cta {
@@ -180,12 +180,17 @@ button {
 
 .intro .inner-wrapper {
   display: flex;
+  flex-direction: row;
+  padding: 4rem 1rem;
 }
 
 .inner-inner-wrapper {
   max-width: 600px;
 }
 
+.intro-left {
+  flex-shrink: 2;
+}
 
 .intro-right {
   display: flex;
@@ -193,8 +198,7 @@ button {
 }
 
 .intro img {
-  max-width: 70%;
-  max-height: auto;
+  max-width: 350px;
   margin-bottom: 2rem;
 }
 
@@ -257,10 +261,7 @@ figcaption p {
 .testimonial {
   margin: 6rem auto;
   text-align: left;
-}
-blockquote {
-  padding: 5rem 6rem;
-  text-align: left;
+ padding: 5rem 6rem;
 }
 
 blockquote .cite {
@@ -287,4 +288,10 @@ footer {
 
 footer a {
   color: #f9faf8;
+}
+
+@media screen and (max-width: 750px) {
+  .hero-img {
+    display: none;
+  }
 }
