--- a/css/styles.css
+++ b/css/styles.css
@@ -241,19 +241,18 @@ figcaption p {
 /* cta */
 
 .cta-card {
-  width: 960px;
-  margin: 4rem auto;
+  max-width: 960px;
   padding: 2rem;
   color: #e5e7eb;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
   border-radius: .5rem;
-  padding: 2rem 7rem;
+  flex-wrap: wrap;
 }
 
 .cta-card button {
-  border: 2px solid #e5e7eb;
+  border: 2px solid #e5e7eb; 
+  margin: 1rem;
 }
 
 /* testimonial */
@@ -261,7 +260,7 @@ figcaption p {
 .testimonial {
   margin: 6rem auto;
   text-align: left;
- padding: 5rem 6rem;
+  padding: 5rem 6rem;
 }
 
 blockquote .cite {
